--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 body {
+  background-color: #282c34;
+  color: white;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Roboto Mono', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button {
+  padding: 1rem 2rem;
+  border: 0.125rem solid rgba(0,0,0, 0.89);
+  color: rgba(0,0,0, 0.89);
+  background-color: white;
+  font-size: 3rem;
+  text-transform: lowercase;
+  transition: 0.4s all ease-in-out;
+  margin: 1rem
+}
+
+button:hover {
+  cursor: pointer;
+  opacity: 0.55
+}
+
+label {
+  font-size: 3rem;
+  color: rgba(0,0,0, 0.89);
+  margin: 1rem
+}
+
+input {
+  margin: 0 auto;
+  height: 5rem;
+  font-size: 3rem;
+  max-width: 21rem
 }
